# flowstate

./: flake.nix  package.json  svelte.config.js
app/: .gitignore  eslint.config.js  package.json  vite.config.js
app/src/: catppuccin.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  preview.rs  watch.rs
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/workspace/[id]/: +layout.svelte  +layout.ts  +page.svelte
app/src/routes/workspace/[id]/note/[slug]/: +page.svelte  +page.ts
examples/hello_world/: hello_world.typ
lsp/: Cargo.toml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src/routes/: +page.svelte
